@@ -1,3 +1,12 @@
+Mon Aug  2 14:11:18 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* gamin.spec.in: spelling fix (thanks fcrozat)
+	* libgamin/gam_api.clibgamin/gam_data.c libgamin/gam_data.h:
+	  fix a problem of setting/checking that the client did actually
+	  authenticate with the server.
+	* tests/testing.c: make a better interactive debugging mode
+	  using "testgam -" more powerful than pure static file tests.
+
 Fri Jul 30 15:01:17 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in gamin.spec.in libgamin/Makefile.am: release 0.0.3,
